pages/agent/v2/linux.md
# Installing Buildkite Agent on Linux

> 🚧 This page references the out-of-date Buildkite Agent v2.
> For docs referencing the Buildkite Agent v3, <a href="/docs/agent/v3/self-hosted/install/linux">see the latest version of this document</a>.

You can install Buildkite Agent on most Linux based systems (including macOS).

## Installation

Run the following script (<a href="https://raw.githubusercontent.com/buildkite/agent/main/install.sh">view the source</a>), which will download and install the correct binary for your system and architecture:

```shell
TOKEN="INSERT-YOUR-AGENT-TOKEN-HERE" bash -c "`curl -sL https://raw.githubusercontent.com/buildkite/agent/main/install.sh`"
```

Then, start the agent:

```shell
~/.buildkite-agent/bin/buildkite-agent start
```

Alternatively you can follow the [manual installation instructions](/docs/agent/v2/installation#manual-installation).

## SSH key configuration

SSH keys should be copied to (or generated into) `~/.ssh/` for the user the agent is running as. For example, to generate a new private key which you can add to your source code host:

```bash
$ mkdir -p ~/.ssh && cd ~/.ssh
$ ssh-keygen -t rsa -b 4096 -C "build@myorg.com"
```

See the [Agent SSH keys](/docs/agent/v2/ssh-keys) documentation for more details.

## File locations

* Configuration: `~/.buildkite-agent/buildkite-agent.cfg`
* Agent Hooks: `~/.buildkite-agent/hooks`
* Builds: `~/.buildkite-agent/builds`
* SSH keys: `~/.ssh`

## Configuration

The configuration file is located at `~/.buildkite-agent/buildkite-agent.cfg`. See the [configuration documentation](/docs/agent/v2/configuration) for an explanation of each configuration setting.

## Upgrading

Rerun the install script.
